Send email on new user

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_USER=user
 DB_PASSWORD=password
 GOOGLE_CLIENT_ID=id
 GOOGLE_CLIENT_SECRET=secret
+SMTP_HOST=smtp_host
+SMTP_PORT=0000
+SMTP_PROTOCOL=SSL
+SMTP_LOGIN=login
+SMTP_PASSWORD=password
+COMPANY_EMAIL=test@email.com
