--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "tonephp/starter-kit",
     "require": {
         "tonephp/tonephp": "^0.1.10",
-        "google/apiclient": "^2.11"
+        "google/apiclient": "^2.11",
+        "swiftmailer/swiftmailer": "^6.2"
     }
 }
